# ps2exe

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  PowerShellCompiler.cpp  README.md  build.bat  example.ps1  ps2exe.py  stub.cpp
.github/workflows/: build.yml
