cmake_minimum_required(VERSION 3.16)
project(PowerShellCompiler CXX)
set(CMAKE_CXX_STANDARD 17)
add_executable(PowerShellCompiler WIN32 PowerShellCompiler.cpp)
target_link_libraries(PowerShellCompiler shell32 shlwapi advapi32 ole32)
if(MSVC)
    target_compile_options(PowerShellCompiler PRIVATE /W4 /O2 /GS- /MT)
    set_target_properties(PowerShellCompiler PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS /ENTRY:wWinMainCRTStartup")
endif()
